new-code/redis-insight/redis-insight-ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redisinsight-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # type of authentication  
    nginx.ingress.kubernetes.io/auth-type: basic  
    # name of the secret that contains the user/password definitions  
    nginx.ingress.kubernetes.io/auth-secret: redis-insight-auth  
    # message to display with an appropriate context why the authentication is required  
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - DFE'
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  rules:
  - host: dfe-redins.isgsuite.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redisinsight-service
            port:
              number: 9001
  tls:
  - hosts:
    - dfe-redins.isgsuite.com
    secretName: dfe-redins-secret
